--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,1 +1,6 @@
-<h1>Here I am</h1>
+<h1>Here are my parameters:</h1>
+<ul>
+<% params.each do |key, value| %>
+<li><%= "#{key} ... #{value}" %></li>
+<% end %>
+</ul>
