--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,6 +1,2 @@
-<h1>Here are my parameters:</h1>
-<ul>
-<% params.each do |key, value| %>
-<li><%= "#{key} ... #{value}" %></li>
-<% end %>
-</ul>
+<h1>This is my course view</h1>
+<% puts "------------------------> show view" %>
