--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,2 +1,2 @@
 <h1>This is my course view</h1>
-<% puts "------------------------> show view" %>
+<% logger.info "------------------------> show view!" %>
